[gd_scene load_steps=14 format=2]

[ext_resource path="res://assets/art/shop/shop_background.png" type="Texture" id=1]
[ext_resource path="res://assets/fonts/NanumSquareRoundB.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://src/GUI/QuestListBox.gd" type="Script" id=3]
[ext_resource path="res://assets/fonts/NanumBarunpenR.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/fonts/NanumBarunpenB.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 24
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=7]
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=8]
size = 32
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=5]
size = 32
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=6]
size = 32
font_data = ExtResource( 2 )

[node name="QuestListBox" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 427.265
margin_top = 124.531
margin_right = 1499.27
margin_bottom = 956.531
texture = ExtResource( 1 )
expand = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestScrollContainer" type="ScrollContainer" parent="TextureRect"]
margin_left = 24.3348
margin_top = 226.0
margin_right = 512.335
margin_bottom = 815.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuestContainer" type="VBoxContainer" parent="TextureRect/QuestScrollContainer"]
margin_right = 338.0
margin_bottom = 37.0

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/QuestScrollContainer/QuestContainer"]
margin_right = 338.0
margin_bottom = 37.0

[node name="Label" type="Label" parent="TextureRect/QuestScrollContainer/QuestContainer/HBoxContainer"]
margin_right = 113.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "[미완료]"

[node name="Label2" type="Label" parent="TextureRect/QuestScrollContainer/QuestContainer/HBoxContainer"]
margin_left = 117.0
margin_right = 338.0
margin_bottom = 37.0
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "나뭇잎을 구해줘!"

[node name="Button" type="Button" parent="TextureRect"]
margin_left = 887.758
margin_top = 27.7837
margin_right = 1039.76
margin_bottom = 72.7837
custom_fonts/font = SubResource( 3 )
text = "나가기"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quester" type="RichTextLabel" parent="TextureRect"]
margin_left = 560.0
margin_top = 230.0
margin_right = 1049.0
margin_bottom = 317.0
custom_fonts/mono_font = SubResource( 7 )
custom_fonts/normal_font = SubResource( 8 )
custom_colors/default_color = Color( 0, 0, 0, 1 )

[node name="QuestDetail" type="RichTextLabel" parent="TextureRect"]
margin_left = 561.335
margin_top = 385.0
margin_right = 1046.33
margin_bottom = 675.0
custom_fonts/mono_font = SubResource( 4 )
custom_fonts/normal_font = SubResource( 5 )
custom_colors/default_color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ProgressContainer" type="Control" parent="TextureRect"]
visible = false
margin_left = 563.5
margin_top = 677.684
margin_right = 675.5
margin_bottom = 717.684

[node name="Progress" type="Label" parent="TextureRect/ProgressContainer"]
margin_right = 112.0
margin_bottom = 39.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "진행사항"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Container" type="VBoxContainer" parent="TextureRect/ProgressContainer"]
margin_left = 10.0
margin_top = 46.0
margin_right = 415.0
margin_bottom = 86.0
[connection signal="pressed" from="TextureRect/Button" to="." method="_on_Exit_Button_pressed"]
